k3s/manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vinlab
  labels:
    name: vinlab
    app: vindr-lab
