k3s/manifests/01-elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: es
  replicas: 1
  template:
    metadata:
      labels:
        app: es
    spec:
      volumes:
        - name: es-pvc
          persistentVolumeClaim:
            claimName: es-pvc
      containers:
        - name: es
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
          ports:
            - containerPort: 9200
              name: es-port
          volumeMounts:
            - name: es-pvc
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: vinlab
spec:
  selector:
    app: es
  ports:
    - port: 9200
      targetPort: 9200
