k3s/manifests/02-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis-port
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vinlab
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
