k3s/manifests/03-minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio-pvc
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio
          image: minio/minio:RELEASE.2022-05-04T07-45-27Z
          ports:
            - containerPort: 9000
              name: minio-api
            - containerPort: 9001
              name: minio-console
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio server /data --console-address \":9001\""
          volumeMounts:
            - name: minio-pvc
              mountPath: /data
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: vinlab
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
