k3s/manifests/04-keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: keycloak-pvc
          persistentVolumeClaim:
            claimName: keycloak-pvc
      containers:
        - name: keycloak
          image: jboss/keycloak:11.0.2
          args:
            - "-Djboss.http.port=8080"
            - "-Dkeycloak.profile.feature.upload_scripts=enabled"
          ports:
            - containerPort: 8080
              name: keycloak-port
          volumeMounts:
            - name: keycloak-pvc
              mountPath: /opt/jboss/keycloak/standalone/data
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: vinlab
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
