k3s/manifests/05-orthanc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: orthanc
  replicas: 1
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      volumes:
        - name: orthanc-pvc
          persistentVolumeClaim:
            claimName: orthanc-pvc
      containers:
        - name: orthanc
          image: jodogne/orthanc:1.12.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4242
              name: dicom-port
            - containerPort: 8042
              name: web-port
          volumeMounts:
            - name: orthanc-pvc
              mountPath: /var/lib/orthanc/db
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc
  namespace: vinlab
spec:
  selector:
    app: orthanc
  ports:
    - name: dicom
      port: 4242
      targetPort: 4242
    - name: web
      port: 8042
      targetPort: 8042
