k3s/manifests/08-vinlab-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-api-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: vinlab-api
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-api
    spec:
      volumes:
        - name: backend-configmap
          configMap:
            name: backend-configmap
            items:
              - key: config.production.toml
                path: config.production.toml
              - key: permissions.csv
                path: permissions.csv
      containers:
        - name: vinlab-api
          image: vindr/vinlab-api
          ports:
            - containerPort: 8080
              name: api-port
          volumeMounts:
            - name: backend-configmap
              mountPath: /opt/app/conf/config.production.toml
              subPath: config.production.toml
            - name: backend-configmap
              mountPath: /opt/app/conf/permissions.csv
              subPath: permissions.csv
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: vinlab-api
  namespace: vinlab
spec:
  selector:
    app: vinlab-api
  ports:
    - port: 8080
      targetPort: 8080
