k3s/manifests/09-vinlab-uploader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-uploader-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: vinlab-uploader
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-uploader
    spec:
      containers:
        - name: vinlab-uploader
          image: vindr/vinlab-dicom-uploader
          ports:
            - containerPort: 8080
              name: uploader-port
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: vinlab-uploader
  namespace: vinlab
spec:
  selector:
    app: vinlab-uploader
  ports:
    - port: 8080
      targetPort: 8080
