k3s/manifests/10-vinlab-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-dashboard-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: vinlab-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-dashboard
    spec:
      containers:
        - name: vinlab-dashboard
          image: vindr/vinlab-dashboard
          ports:
            - containerPort: 80
              name: dashboard-port
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "128Mi"
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: vinlab
spec:
  selector:
    app: vinlab-dashboard
  ports:
    - port: 80
      targetPort: 80
