k3s/manifests/11-vinlab-viewer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinlab-viewer-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: vinlab-viewer
  replicas: 1
  template:
    metadata:
      labels:
        app: vinlab-viewer
    spec:
      containers:
        - name: vinlab-viewer
          image: vindr/vinlab-viewer
          ports:
            - containerPort: 80
              name: viewer-port
          resources:
            limits:
              memory: "2046Mi"
            requests:
              memory: "1024Mi"
      imagePullSecrets:
        - name: vindr-ecr
---
apiVersion: v1
kind: Service
metadata:
  name: viewer
  namespace: vinlab
spec:
  selector:
    app: vinlab-viewer
  ports:
    - port: 80
      targetPort: 80
