k3s/manifests/12-apigateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  namespace: vinlab
spec:
  selector:
    matchLabels:
      app: apigateway
  replicas: 1
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      volumes:
        - name: apigateway-configmap
          configMap:
            name: apigateway-configmap
            items:
              - key: nginx.conf
                path: default.conf
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - name: apigateway-configmap
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: vinlab
spec:
  selector:
    app: apigateway
  ports:
    - port: 80
      targetPort: 80
